--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.ProjectGenerator" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.ProjectGenerator" parent="android:Theme.Material.Light.NoActionBar" >
+        <item name="android:statusBarColor">@color/android:transparent</item>
+        <item name="android:navigationBarColor">@color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@color/android:transparent</item>
+        <item name="background">@color/android:transparent</item>
+    </style>
+
 </resources>
